chromeos: Don't use WarmService to start tap_visualizer

Instead define an explicit Show() method to start the UI. See bug for
details.

TBR=sky@chromium.org

Bug: 904148
Test: Run chrome --show-taps, see touch point circles
Change-Id: I9d718097be9bb685e1e218780489fffce386a622
Reviewed-on: https://chromium-review.googlesource.com/c/1385013
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Ken Rockot <rockot@google.com>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619458}
Former-commit-id: 1d323b303e9dffc236aff587691a6aa156193ad1