ash/components/tap_visualizer/tap_visualizer_app_unittest.cc
@@ -26,7 +26,7 @@ class TapVisualizerAppTestApi {
   explicit TapVisualizerAppTestApi(TapVisualizerApp* app) : app_(app) {}
   ~TapVisualizerAppTestApi() = default;
 
-  void Start() { app_->Start(); }
+  void Show() { app_->Show(); }
 
   bool HasRendererForDisplay(int64_t display_id) {
     return base::ContainsKey(app_->display_id_to_renderer_, display_id);
@@ -83,7 +83,7 @@ TEST_F(TapVisualizerAppTest, Basics) {
   // Simulate the service starting.
   TapVisualizerApp app(nullptr);
   TapVisualizerAppTestApi test_api(&app);
-  test_api.Start();
+  test_api.Show();
 
   // A fullscreen widget is created.
   views::Widget* widget = test_api.GetWidgetForDisplay(kFirstDisplayId);
@@ -113,7 +113,7 @@ TEST_F(TapVisualizerAppTest, MultiDisplay) {
   // Simulate the service starting.
   TapVisualizerApp app(nullptr);
   TapVisualizerAppTestApi test_api(&app);
-  test_api.Start();
+  test_api.Show();
 
   // Two renderers are created.
   EXPECT_TRUE(test_api.HasRendererForDisplay(kFirstDisplayId));
